--- a/style.css
+++ b/style.css
@@ -1,1 +1,67 @@
-sddascdsaf
+/* Reset default browser styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+/* explaination of this css  -  This is a wrapper class that provides a consistent layout structure across the website */
+.wrapper {
+  height: 100px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+/* Global font and background */
+body {
+  font-family: Arial, sans-serif;
+  background: #dff1e0;
+  color: #000000;
+  line-height: 1.6;
+}
+
+/* Container for max width */
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* Header */
+/* explaination of this css-  */
+header {
+  background: #dff1e0;
+  color: rgb(0, 0, 0);
+  padding: 10px 0;
+}
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+header nav ul {
+  list-style: none;
+  display: flex;
+  margin-right: 400px;
+}
+header nav ul li {
+  margin-left: 80px;
+}
+header nav ul li a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+/* Footer */
+footer {
+  position: absolute;
+  bottom: 0;
+  background: #222;
+  color: white;
+  text-align: center;
+  padding: 30px 0;
+  font-size: 20px;
+  width: 90%;
+}
