--- a/style.css
+++ b/style.css
@@ -53,6 +53,16 @@ header nav ul li a {
   color: rgb(0, 0, 0);
   text-decoration: none;
 }
+header nav ul li a:hover {
+  width: 40px;
+  height: 40px;
+  padding: 5px 10px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  color: #000000;
+  background-color: #ffffff;
+   transform: scale(1.1);
+}
 
 /* Footer */
 footer {
